# xdg-desktop-entry

./: CHANGELOG.md  xdg-desktop-entry.cabal
src/System/Environment/XDG/: DesktopEntry.hs
