cabal-version:       2.4
name:                xdg-desktop-entry
version:             0.1.1.1
synopsis:            Parse files conforming to the xdg desktop entry spec
description:         Parse files conforming to the xdg desktop entry spec.
bug-reports:         https://github.com/taffybar/xdg-desktop-entry/issues
homepage:            https://github.com/taffybar/xdg-desktop-entry
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ivan Malison
maintainer:          IvanMalison@gmail.com
-- copyright:
category:            System
extra-doc-files:  CHANGELOG.md
tested-with:         GHC == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.8 || == 9.4.8 || == 9.6.4 || == 9.8.1

source-repository head
  type:     git
  location: https://github.com/taffybar/xdg-desktop-entry.git

library
  exposed-modules:     System.Environment.XDG.DesktopEntry
  build-depends:       base >=4.13 && < 5,
                       ConfigFile >= 1.1.4 && < 1.2,
                       directory >= 1.3.6 && < 1.4,
                       either >= 5.0.1.1 && < 5.1,
                       filepath >= 1.4.2 && < 1.6,
                       multimap >= 1.2.1 && < 1.3,
                       safe >= 0.3.19 && < 0.4,
                       transformers >= 0.5.6 && < 0.6.2,
                       unix >= 2.7.2 && < 2.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
